--- a/ch3-config-server/src/main/resources/config/eureka-client-zone2.yml
+++ b/ch3-config-server/src/main/resources/config/eureka-client-zone2.yml
@@ -1,14 +1,11 @@
 server:
-  port: 8082
-
-spring:
-  application:
-    name: eureka-client1
+  port: 8072
 
 eureka:
   instance:
     metadataMap.zone: zone2
   client:
+    prefer-same-zone-eureka: true
     region: region-east
     service-url:
 #      one eureka server
@@ -16,7 +13,9 @@ eureka:
 #      two eureka server
 #      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
 #      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
-      zone1: http://localhost:8761/eureka/,http://localhost:8762/eureka/
-      zone2: http://localhost:8763/eureka/,http://localhost:8764/eureka/
+#      zone1: http://localhost:8761/eureka/,http://localhost:8762/eureka/
+#      zone2: http://localhost:8763/eureka/,http://localhost:8764/eureka/
+      zone1: http://localhost:8761/eureka/
+      zone2: http://localhost:8762/eureka/
     availability-zones:
       region-east: zone1,zone2
