--- a/ch3-config-server/src/main/resources/config/eureka-client-zone3.yml
+++ b/ch3-config-server/src/main/resources/config/eureka-client-zone3.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8071
+  port: 8073
 
 eureka:
   instance:
-    metadataMap.zone: zone1
+    metadataMap.zone: zone3
   client:
     prefer-same-zone-eureka: true
-    region: region-east
+    region: region-west
     service-url:
 #      one eureka server
 #      defaultZone: http://localhost:8761/eureka/
@@ -15,7 +15,9 @@ eureka:
 #      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
 #      zone1: http://localhost:8761/eureka/,http://localhost:8762/eureka/
 #      zone2: http://localhost:8763/eureka/,http://localhost:8764/eureka/
-      zone1: http://localhost:8761/eureka/
-      zone2: http://localhost:8762/eureka/
+#      zone1: http://localhost:8761/eureka/
+#      zone2: http://localhost:8762/eureka/
+      zone3: http://localhost:8763/eureka/
+      zone4: http://localhost:8764/eureka/
     availability-zones:
-      region-east: zone1,zone2
+      region-west: zone3,zone4
