--- a/ch3-config-server/src/main/resources/config/eureka-server-peer2.yml
+++ b/ch3-config-server/src/main/resources/config/eureka-server-peer2.yml
@@ -5,7 +5,7 @@ eureka:
   instance:
     hostname: localhost
     preferIpAddress: true
-    metadataMap.zone: zone1
+    metadataMap.zone: zone2
   client:
     registerWithEureka: true
     fetchRegistry: true
@@ -13,10 +13,15 @@ eureka:
     serviceUrl:
 #      defaultZone: http://localhost:8761/eureka/ # two eureka server
 #      defaultZone: http://localhost:8761/eureka/,http://localhost:8763/eureka/ # three eureka server
-      zone1: http://localhost:8761/eureka/,http://localhost:8762/eureka/
-      zone2: http://localhost:8763/eureka/,http://localhost:8764/eureka/
+#      zone1: http://localhost:8761/eureka/,http://localhost:8762/eureka/
+#      zone2: http://localhost:8763/eureka/,http://localhost:8764/eureka/
+      zone1: http://localhost:8761/eureka/
+      zone2: http://localhost:8762/eureka/
     availability-zones:
+#      region-east: zone1,zone2
       region-east: zone1,zone2
   server:
     waitTimeInMsWhenSyncEmpty: 0
     enableSelfPreservation: false
+    remoteRegionUrlsWithName:
+      region-west: http://localhost:8763/eureka/
