--- a/ch3-config-server/src/main/resources/config/eureka-server-peer3.yml
+++ b/ch3-config-server/src/main/resources/config/eureka-server-peer3.yml
@@ -1,26 +1,28 @@
 server:
   port: 8763
 
-spring:
-  application:
-    name: eureka-server
 eureka:
   instance:
     hostname: localhost
     preferIpAddress: true
-    metadataMap.zone: zone2
+    metadataMap.zone: zone3
   client:
     registerWithEureka: true
     fetchRegistry: true
-    region: region-east
+    region: region-west
     serviceUrl:
       #      defaultZone: http://localhost:8761/eureka/ # one eureka server
 #      defaultZone: http://localhost:8762/eureka/ # two eureka server
 #      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/ # three eureka server
-      zone1: http://localhost:8761/eureka/,http://localhost:8762/eureka/
-      zone2: http://localhost:8763/eureka/,http://localhost:8764/eureka/
+#      zone1: http://localhost:8761/eureka/,http://localhost:8762/eureka/
+#      zone2: http://localhost:8763/eureka/,http://localhost:8764/eureka/
+      zone3: http://localhost:8763/eureka/
+      zone4: http://localhost:8764/eureka/
     availability-zones:
-      region-east: zone1,zone2
+#      region-east: zone1,zone2
+      region-west: zone3,zone4
   server:
     waitTimeInMsWhenSyncEmpty: 0
     enableSelfPreservation: false
+    remoteRegionUrlsWithName:
+      region-east: http://localhost:8761/eureka/
