--- a/ch3-config-server/src/main/resources/config/eureka-client-zone1.yml
+++ b/ch3-config-server/src/main/resources/config/eureka-client-zone1.yml
@@ -5,6 +5,10 @@ eureka:
   instance:
     metadataMap.zone: zone1
   client:
+    security:
+      basic:
+        user: admin
+        password: 123456
     prefer-same-zone-eureka: true
     region: region-east
     service-url:
@@ -15,7 +19,7 @@ eureka:
 #      defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
 #      zone1: http://localhost:8761/eureka/,http://localhost:8762/eureka/
 #      zone2: http://localhost:8763/eureka/,http://localhost:8764/eureka/
-      zone1: http://localhost:8761/eureka/
+      zone1: http://${eureka.client.security.basic.user}:${eureka.client.security.basic.password}@localhost:8761/eureka/
       zone2: http://localhost:8762/eureka/
     availability-zones:
       region-east: zone1,zone2
