--- a/ch3-eureka-server/src/main/resources/bootstrap.yml
+++ b/ch3-eureka-server/src/main/resources/bootstrap.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: eureka-server
+  security:
+    user:
+      name: admin
+      password: 123456
+
   cloud:
     config:
       uri: http://localhost:8888
