--- a/ch10-data-service/pom.xml
+++ b/ch10-data-service/pom.xml
@@ -9,9 +9,20 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ch10-user-service</artifactId>
+    <artifactId>ch10-data-service</artifactId>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.lql</groupId>
+            <artifactId>ch10-common</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -25,12 +36,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-org.lql.config-client</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.lql</groupId>
-            <artifactId>ch10-common</artifactId>
-            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 </project>
