--- a/ch10-data-service/pom.xml
+++ b/ch10-data-service/pom.xml
@@ -35,7 +35,7 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-org.lql.config-client</artifactId>
+            <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
     </dependencies>
 </project>
