--- a/ch11-config-server/src/main/resources/bootstrap.yml
+++ b/ch11-config-server/src/main/resources/bootstrap.yml
@@ -9,6 +9,20 @@ spring:
 #          username:
   application:
     name: sc-config-git
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 server:
   port: 9090
+
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: '*'
